--- a/part3-phonebook/package.json
+++ b/part3-phonebook/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo 'Error: No test specified!!' && exit 1"
+    "test": "echo 'Error: No test specified!!' && exit 1",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "mongoose": "^6.4.4"
+  },
+  "devDependencies": {
+    "eslint": "^8.19.0"
   }
 }
