--- a/part3-phonebook/package.json
+++ b/part3-phonebook/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "eslint": "^8.19.0"
+    "eslint": "^8.19.0",
+    "supertest": "^6.2.4"
   }
 }
